# UPS

1/: CMakeLists.txt  Makefile.win  Server.dev  ant.xml  build.xml  main.c  readme.txt
1/c/: client.c  client.h  dynArray.c  dynArray.h  game.c  game.h  main.c  server.c  server.h  user.c  user.h
1/cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
1/src/: AppStage.java  Checker.java  Connection.java  DummyServer.java  Game.java  Main.java  ServerMaster.java  Table.java  TablePickerRefresher.java  TableViewCell.java  User.java
